--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -364,7 +364,7 @@ so one semver break could result in tons of broken crates.
 
 Debugging a cryptic compilation error that starts showing up one day,
 without any change to the code, can be frustrating. In fact, we have experienced it during our contributions
-(one of the tool's users opened a GitHub Issue \cite{issue-compiling-fails}), as one of our dependencies broke semver. This is a major problem, as it might drive the users to stop using your crate.
+(one of the tool's users opened a GitHub Issue \cite{issue-compiling-fails}), as one of our dependencies broke semver. This is a major problem, as it might drive the users to stop using such crate.
 
 Because of that, maintainers have to yank
 the incorrect releases as soon as possible
