--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -343,7 +343,7 @@ so the change results in a publicly visible struct {\ttfamily Bar} losing a trai
 
 The given example is not only non-obvious, but also is even harder to notice
 in large codebases, where those struct could be in very different locations.
-In fact, a similar error crept into release v3.2.0 of a well-known crate
+In fact, a similar error crept into the release v3.2.0 of a well-known crate
 maintained by the Rust team -- {\ttfamily clap}.
 More of that later on in section \ref{r:section_real_life_semver_breaks}.
 
