--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -416,7 +416,7 @@ the metadata present in the rust-specific rlib binary static library format.
 Because of that, the user experience is far from ideal,
 as it forces the user to use some specific unstable versions of the language, and the quality of error messages is limited.
 
-In comparison, the cargo-semver-checks' approach to write lints as queries, seems to work really well.
+In comparison, the cargo-semver-checks' approach to write lints as queries seems to work really well.
 Adding new queries is designed to be accessible, and the maintenance comes to
 keeping up with rustdoc API changes, which seems to be about as low effort as it could be.
 
