--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -387,7 +387,7 @@ Those were examples of popular crates with experienced maintainers, but the prob
 where developers might not know the common semver pitfalls. A paper \cite{paper}
 claims that out of the yanked (un-publised) releases,
 semver break was the leading reason for yanking, with a shocking 43\% rate.
-It also mentions that 3.7\% of all releases (and there is more than 300 000 of them already),
+It also mentions that 3.7\% of all releases (and there is more than 300 000 of them already)
 are yanked, which shows the scale of the problem -- thousands of detected semver breaks.
 
 \section{Existing tools for detecting semver breaks}\label{r:section_existing_semver_tools}
