--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -320,7 +320,7 @@ and focuses on structural or contextual details.
 \section{Problems with using semver in Rust}\label{r:section_usageofsemver}
 
 It might seem easy to maintain semver, but some violations are hard to notice
-when not actively searching for them. Let's look at an example.
+when not actively searched for. Consider the following example:
 \vspace{-3pt}
 \begin{verbatim}
   struct Foo {
