--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -345,7 +345,7 @@ The given example is not only unobvious, but also even harder to notice
 in large codebases, where those structs could be in completely different locations.
 In fact, a similar error crept into the release v3.2.0 of a well-known crate
 maintained by the Rust team -- {\ttfamily clap}.
-More of that later on in section \ref{r:section_real_life_semver_breaks}.
+More details about it can be found in section \ref{r:section_real_life_semver_breaks}.
 
 The same issue almost happened
 (but has been prevented thanks to our tool)
