--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -350,7 +350,7 @@ More details about it can be found in section \ref{r:section_real_life_semver_br
 The same issue almost happened
 (but has been prevented thanks to our tool)
 in another common library \texttt{rust-libp2p},
-in which from the conversation \cite{issue-libp2p} it's clear that the maintainers
+where it is clear from the conversation \cite{issue-libp2p} that the maintainers
 were not expecting their type to stop being \texttt{UnwindSafe} and were likely not even aware that
 their type was publicly \texttt{UnwindSafe} to start with.
 
