--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -356,7 +356,7 @@ their type was publicly \texttt{UnwindSafe} to start with.
 
 \section{Consequences of breaking semver}
 
-When a maintainer publishes a new version of a crate that is breaking semver,
+When a maintainer publishes a new version of their crate that is breaking semver,
 it is causing a major inconvenience for the crate's users.
 Their code might just stop compiling when the offending version gets downloaded.
 This also could happen if the crate containing the violation is not an immediate dependency,
