--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -360,7 +360,7 @@ When a maintainer publishes a new version of their crate that is breaking semver
 it is causing a major inconvenience for the crate's users.
 Their code might just stop compiling when the offending version gets downloaded.
 This could also happen if the crate containing the violation is not an immediate dependency,
-so one semver break could result in tons of broken crates.
+so one semver break could result in tons of other broken crates.
 
 Debugging a cryptic compilation error that starts showing up one day,
 without any change to the code, can be frustrating. In fact, we have experienced it during our contributions
