--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -369,7 +369,7 @@ without any change to the code, can be frustrating. In fact, we have experienced
 Because of that, maintainers have to yank
 the incorrect releases as soon as possible
 -- otherwise more users would encounter this problem and their trust
-in this crate (and crates using it as a dependency)
+in this particular crate (and crates using it as a dependency)
 would decrease. Even though yanking the release seems easy, fixing the semver break could also result in a lot of additional work for the maintainers -- they have to investigate the semver break when it is reported, inform the users about the yanking and possibly help some move away from the faulty release.
 
 \section{Real-life examples of semver breaks} \label{r:section_real_life_semver_breaks}
