--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -392,7 +392,7 @@ are yanked, which shows the scale of the problem -- thousands of detected semver
 
 \section{Existing tools for detecting semver breaks}\label{r:section_existing_semver_tools}
 
-There aren't many great existing tools for semver checking.
+There are not many great tools for semver checking in existence.
 The main reason for that is that the semantics of popular languages
 makes it that complete automatic verification is practically impossible.
 There are some initiatives to combat this. For example,
