--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -401,7 +401,7 @@ Its type system enables automatic detection of all API changes.
 Outside of that, it does not appear that tools for checking semver
 in estabilished languages like Python or C++ are commonly used in the industry.
 
-Unfortunately, the Rust langugage's semantic were also not designed with semver in mind.
+Unfortunately, the Rust language's semantics were also not designed with semver in mind.
 Despite this, there are some existing tools for semver checking.
 First of them, \texttt{cargo-breaking}, works on the abstract syntax tree.
 Although ASTs contain all the information needed for comparing API changes,
