--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -394,7 +394,7 @@ are yanked, which shows the scale of the problem -- thousands of detected semver
 
 There are not many great tools for semver checking in existence.
 The main reason for that is that the semantics of popular languages
-makes it that complete automatic verification is practically impossible.
+make complete and automatic verification practically impossible.
 There are some initiatives to combat this. For example,
 the Elm languge\cite{elm-lang} by design enforces semantic versioning.
 Its type system enables automatic detection of all API changes.
