--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -409,7 +409,7 @@ it has a major drawback -- two trees must be navigated at once.
 It can get complex and tedious (especially when checking for moved or removed items), because the abstract syntax tree could change quite a lot,
 even without any public API changes.
 Another issue is that both language syntax and the structure of the abstract syntax tree
-often changes along with the development of the language, which makes maintenance time-consuming.
+often change along with the development of the language, which makes maintenance time-consuming.
 
 The second existing tool is \texttt{rust-semverver}, which focuses on
 the metadata present in the rust-specific rlib binary static library format.
