--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -547,7 +547,7 @@ into their workflow:
 	\item some existing lints had false-positives,
 	\item the codebase was not in a state where new contributors could easily begin making changes
 		to the project (which is crucial for the project to flourish in the long term).
-		For example, adding new lints and tests wasn't intuitive and required many manual steps,
+		For example, adding new lints and tests was not intuitive and required many manual steps,
 		the filenames and variable names were not always descriptive enough
 		and the code lacked comments that explained some of the logic and decisions behind it.
 \end{itemize}
